--- a/Tatev_FinalProject.ipynb
+++ b/Tatev_FinalProject.ipynb
@@ -10,7 +10,7 @@
     "* Class: DS 5100\n",
     "* Student Name: Tatev Gomtsyan\n",
     "* Student Net ID: tmg6jda\n",
-    "* This URL: a URL to the notebook source of this document"
+    "* This URL: https://github.com/tatevmane/tatevmane_ds5100_montecarlo/blob/main/Tatev_FinalProject.ipynb"
    ]
   },
   {
