--- a/Tatev_FinalProject.ipynb
+++ b/Tatev_FinalProject.ipynb
@@ -823,7 +823,7 @@
    "id": "ee090b33-d593-48a0-bf35-e739cea0942c",
    "metadata": {},
    "source": [
-    "URL:"
+    "URL:" "https://github.com/tatevmane/tatevmane_ds5100_montecarlo/blob/main/README.md"
    ]
   },
   {
