--- a/Tatev_FinalProject.ipynb
+++ b/Tatev_FinalProject.ipynb
@@ -10,7 +10,7 @@
     "* Class: DS 5100\n",
     "* Student Name: Tatev Gomtsyan\n",
     "* Student Net ID: tmg6jda\n",
-    "* This URL: https://github.com/tatevmane/tatevmane_ds5100_montecarlo/blob/main/Tatev_FinalProject.ipynb"
+    "* This URL: a URL to the notebook source of this document"
    ]
   },
   {
@@ -823,7 +823,7 @@
    "id": "ee090b33-d593-48a0-bf35-e739cea0942c",
    "metadata": {},
    "source": [
-    "URL:" "https://github.com/tatevmane/tatevmane_ds5100_montecarlo/blob/main/README.md"
+    "URL:"
    ]
   },
   {
